--- a/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
+++ b/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,8 +11,11 @@
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemorySimulationController">
    <children>
@@ -19,15 +23,15 @@
         <items>
           <AnchorPane prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Pane layoutX="-29.0" layoutY="458.0" prefHeight="120.0" prefWidth="475.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                  <Pane layoutX="-29.0" layoutY="458.0" prefHeight="140.0" prefWidth="475.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                      <children>
-                        <Button fx:id="allocateProcess_btn" layoutX="32.0" layoutY="19.0" mnemonicParsing="false" onKeyPressed="#allocateProcess_keyboardEvent" onMouseClicked="#allocateProcess_mouseEvent" text="Allocate Process" />
-                        <Button fx:id="MemoryConfig_btn" layoutX="32.0" layoutY="67.0" mnemonicParsing="false" text="Memory Hardware Configuration" />
-                        <Button fx:id="clear_btn" layoutX="227.0" layoutY="19.0" mnemonicParsing="false" onMouseClicked="#clear_mouseEvent" prefHeight="31.0" prefWidth="128.0" text="Clear" />
-                        <Button layoutX="291.0" layoutY="67.0" mnemonicParsing="false" onKeyPressed="#memoryCompaction_KeyboardEvent" onMouseClicked="#memoryCompaction_mouseEvent" text="Memory Compaction" />
+                        <Button fx:id="allocateProcess_btn" layoutX="32.0" layoutY="15.0" mnemonicParsing="false" onKeyPressed="#allocateProcess_keyboardEvent" onMouseClicked="#allocateProcess_mouseEvent" prefHeight="31.0" prefWidth="160.0" text="Allocate Process" />
+                        <Button fx:id="MemoryConfig_btn" layoutX="118.0" layoutY="95.0" mnemonicParsing="false" text="Memory Hardware Configuration" />
+                        <Button fx:id="LoadFromFile_btn" layoutX="262.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#clear_mouseEvent" prefHeight="31.0" prefWidth="199.0" text="Load Processes From File" />
+                        <Button layoutX="118.0" layoutY="55.0" mnemonicParsing="false" onKeyPressed="#memoryCompaction_KeyboardEvent" onMouseClicked="#memoryCompaction_mouseEvent" prefHeight="31.0" prefWidth="239.0" text="Memory Compaction" />
                      </children>
                   </Pane>
-                  <Accordion fx:id="accordionPane" layoutY="7.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Accordion fx:id="accordionPane" layoutY="7.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <panes>
                       <TitledPane text="Allocated Processes">
                         <content>
@@ -75,6 +79,51 @@
                               </AnchorPane>
                         </content>
                       </TitledPane>
+                        <TitledPane animated="false" text="Hardware Information">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <GridPane alignment="CENTER_LEFT" hgap="6.0" layoutX="24.0" layoutY="24.0" prefHeight="240.0" prefWidth="445.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="180.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="206.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="0.0" prefWidth="32.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Memory Total Size" />
+                                          <Label fx:id="MemoryTotalSize_Label" GridPane.columnIndex="1" />
+                                          <Label text="Byte" GridPane.columnIndex="2" />
+                                          <Label text="Memory Allignment" GridPane.rowIndex="1" />
+                                          <Label fx:id="MemoryAlignment_Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <Label text="Allocation Method" GridPane.rowIndex="2" />
+                                          <Label fx:id="AllocationMethid_Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <Label text="Memory Free Size" GridPane.rowIndex="3" />
+                                          <Label fx:id="MemoryFreeSize_Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <Label text="Byte" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                                          <Label text="Memory Free Percentage" GridPane.rowIndex="4" />
+                                          <Label fx:id="MemoryFreePrcentage_Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <Label text="\%" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                                          <Label text="Memory Used Size" GridPane.rowIndex="5" />
+                                          <Label fx:id="MemoryUsed_Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                          <Label text="Byte" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                                          <Label text="Memory Used Percentage" GridPane.rowIndex="6" />
+                                          <Label fx:id="MemoryUsedPercentage_Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                          <Label text="\%" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
                     </panes>
                   </Accordion>
                </children>
