--- a/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
+++ b/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
@@ -17,21 +17,23 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemorySimulationController">
+<AnchorPane id="AnchorPane" prefHeight="604.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemorySimulationController">
    <children>
       <SplitPane dividerPositions="0.5" layoutX="206.0" layoutY="66.0" prefHeight="539.0" prefWidth="761.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <Pane layoutX="-29.0" layoutY="458.0" prefHeight="140.0" prefWidth="475.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                  <Pane layoutX="-29.0" layoutY="458.0" prefHeight="180.0" prefWidth="475.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                      <children>
-                        <Button fx:id="allocateProcess_btn" layoutX="32.0" layoutY="15.0" mnemonicParsing="false" onKeyPressed="#allocateProcess_keyboardEvent" onMouseClicked="#allocateProcess_mouseEvent" prefHeight="31.0" prefWidth="160.0" text="Allocate Process" />
-                        <Button fx:id="MemoryConfig_btn" layoutX="118.0" layoutY="95.0" mnemonicParsing="false" text="Memory Hardware Configuration" />
-                        <Button fx:id="LoadFromFile_btn" layoutX="262.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#clear_mouseEvent" prefHeight="31.0" prefWidth="199.0" text="Load Processes From File" />
-                        <Button layoutX="118.0" layoutY="55.0" mnemonicParsing="false" onKeyPressed="#memoryCompaction_KeyboardEvent" onMouseClicked="#memoryCompaction_mouseEvent" prefHeight="31.0" prefWidth="239.0" text="Memory Compaction" />
+                        <Button fx:id="allocateProcess_btn" layoutX="15.0" layoutY="9.0" mnemonicParsing="false" onKeyPressed="#allocateProcess_keyboardEvent" onMouseClicked="#allocateProcess_mouseEvent" prefHeight="31.0" prefWidth="214.0" text="Allocate Process" />
+                        <Button fx:id="MemoryConfig_btn" layoutX="118.0" layoutY="140.0" mnemonicParsing="false" text="Memory Hardware Configuration" />
+                        <Button fx:id="LoadFromFile_btn" layoutX="247.0" layoutY="9.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="214.0" text="Load Processes From File" />
+                        <Button fx:id="memoryCompaction_btn" layoutX="118.0" layoutY="98.0" mnemonicParsing="false" onKeyPressed="#memoryCompaction_KeyboardEvent" onMouseClicked="#memoryCompaction_mouseEvent" prefHeight="31.0" prefWidth="239.0" text="Memory Compaction" />
+                        <Button fx:id="deallocateAll_btn" layoutX="15.0" layoutY="52.0" mnemonicParsing="false" onKeyPressed="#deallocateAll_keyboardEvent" onMouseClicked="#deallocateAll_mouseEvent" prefHeight="31.0" prefWidth="214.0" text="Deallocate All" />
+                        <Button fx:id="deleteAllWaitingProcesses_btn" layoutX="247.0" layoutY="52.0" mnemonicParsing="false" onKeyPressed="#deleteAllWaitingProcesses_keyboardEvent" onMouseClicked="#deleteAllWaitingProcesses_mouseEvent" prefHeight="31.0" prefWidth="214.0" text="Delete All Waiting Processes" />
                      </children>
                   </Pane>
-                  <Accordion fx:id="accordionPane" layoutY="7.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Accordion fx:id="accordionPane" layoutY="7.0" AnchorPane.bottomAnchor="180.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <panes>
                       <TitledPane text="Allocated Processes">
                         <content>
