--- a/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
+++ b/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
@@ -17,9 +17,9 @@
 
 <AnchorPane id="AnchorPane" maxHeight="530.0" maxWidth="620.0" minHeight="530.0" minWidth="620.0" prefHeight="530.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemoryInitializationController">
    <children>
-      <TitledPane collapsible="false" layoutX="40.0" layoutY="27.0" prefHeight="420.0" prefWidth="520.0" text="Memory Free Space Initialize" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+      <TitledPane collapsible="false" layoutX="40.0" layoutY="27.0" prefHeight="446.0" prefWidth="540.0" text="Memory Free Space Initialize" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
          <content>
-            <VBox prefHeight="241.0" prefWidth="518.0" spacing="20.0">
+            <VBox prefHeight="411.0" prefWidth="538.0" spacing="20.0">
                <children>
                   <TableView fx:id="memoryHolesTable" prefHeight="200.0" prefWidth="520.0">
                     <columns>
@@ -51,11 +51,16 @@
                         <Button mnemonicParsing="false" onKeyPressed="#cancelAdditionofFreeHole_keyboardEvent" onMouseClicked="#cancelAdditionofFreeHole_mouseEvent" text="Cancel" />
                      </children>
                   </FlowPane>
+                  <HBox alignment="CENTER" prefHeight="15.0" prefWidth="514.0">
+                     <children>
+                        <Button mnemonicParsing="false" onKeyPressed="#loadFromFile_keyboardEvent" onMouseClicked="#loadFromFile_mouseEvent" text="Load From File" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </content>
       </TitledPane>
-      <HBox alignment="CENTER" layoutY="470.0" spacing="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox alignment="CENTER" layoutY="483.0" spacing="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Button mnemonicParsing="false" onKeyPressed="#saveFreeHoles_keyboardEvent" onMouseClicked="#saveFreeHoles_mouseEvent" text="Save" />
             <Button fx:id="cancel_btn" mnemonicParsing="false" onKeyPressed="#cancelFreeHoles_keyboardEvent" onMouseClicked="#cancelFreeHoles_mouseEvent" text="Cancel" />
