--- a/MemoryManagement/src/memorymanagement/AddProcess.fxml
+++ b/MemoryManagement/src/memorymanagement/AddProcess.fxml
@@ -3,7 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -32,7 +34,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefWidth="160.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNumberConfirmation" prefHeight="29.0" prefWidth="135.0" text="Confirm">
+                              <Button fx:id="confirmNumber" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handlecSegmentNumberConfirmation" onKeyReleased="#handleKeySegmentNumberConfirmButton" prefHeight="29.0" prefWidth="135.0" text="Confirm">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -79,12 +81,12 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="163.0">
                            <children>
-                              <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onAction="#handleSegmentConfirmation" text="Confirm Segment" />
+                              <Button fx:id="confirmSegment" disable="true" mnemonicParsing="false" onAction="#handleSegmentConfirmation" onKeyReleased="#handleKeySegmentConfirmButton" text="Confirm Segment" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="cancel" mnemonicParsing="false" onAction="#handleCancelButton" text="Cancel" />
+                              <Button fx:id="cancel" mnemonicParsing="false" onAction="#handleCancelButton" onKeyReleased="#handleKeyCancelButton" text="Cancel" />
                            </children>
                         </HBox>
                      </children>
@@ -97,6 +99,14 @@
                             <TableColumn fx:id="segmentName" prefWidth="188.0" text="Name" />
                             <TableColumn fx:id="segmentSize" prefWidth="235.0" text="Size (bytes)" />
                           </columns>
+                           <contextMenu>
+                              <ContextMenu fx:id="rightClickOptions" onAction="#handleRightMouseClick">
+                                 <items>
+                                    <MenuItem fx:id="editOption" mnemonicParsing="false" text="Edit" />
+                                    <MenuItem fx:id="deleteOption" mnemonicParsing="false" text="Delete" />
+                                 </items>
+                              </ContextMenu>
+                           </contextMenu>
                         </TableView>
                      </children>
                   </HBox>
