--- a/MemoryManagement/src/memorymanagement/AddProcess.fxml
+++ b/MemoryManagement/src/memorymanagement/AddProcess.fxml
@@ -29,7 +29,7 @@
                         </HBox>
                         <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
                            <children>
-                              <TextField fx:id="numberInputed" prefHeight="31.0" prefWidth="175.0" />
+                              <TextField fx:id="numberInputed" onKeyPressed="#handleKeySegmentNumberConfirmTextfeild" prefHeight="31.0" prefWidth="175.0" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefWidth="160.0" HBox.hgrow="ALWAYS">
